--- a/dev/saas-homework-service.yaml
+++ b/dev/saas-homework-service.yaml
@@ -41,6 +41,11 @@ spec:
             - java  -Xms1024m -Xmx1024m -jar /opt/app/saas-homework-service.jar
           image: "767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/saas-homework-service"
           imagePullPolicy: Always
+          env:
+            - name: TZ
+              value: "CST-8"
+            - name: RUN_ENV
+              value: "dev"
           name: homework
           ports:
             - containerPort: 8080
