修改 service的配置

--- a/dev/saas-homework-service.yaml
+++ b/dev/saas-homework-service.yaml
@@ -75,4 +75,4 @@ spec:
       protocol: TCP
   type: ClusterIP
   selector:
-    k8s.kuboard.cn/name: magnolia-author-backend
+    k8s.kuboard.cn/name: saas-homework-service
