--- a/dev/magnolia-public-mobile.yaml
+++ b/dev/magnolia-public-mobile.yaml
@@ -9,7 +9,7 @@ spec:
   template:
     spec:
       containers:
-        - image: 'nginx:1.21'
+        - image: '767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/sph-mobile'
           imagePullPolicy: IfNotPresent
           name: nginx
           ports:
