--- a/dev/magnolia-public-frontend.yaml
+++ b/dev/magnolia-public-frontend.yaml
@@ -89,6 +89,14 @@ data:
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header X-Forwarded-Proto $scheme;
             }
+            
+            location /lms/teacherClass {
+                proxy_pass http://homework-service:8080/teacherClass;
+                proxy_set_header Host $host;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
+            }
 
             location /lms/file/getRedirectUrl {
                   proxy_pass http://saas-homework-service-svc:8080/file/getRedirectUrl;
