--- a/dev/magnolia-public-mobile.yaml
+++ b/dev/magnolia-public-mobile.yaml
@@ -5,13 +5,13 @@ metadata:
   name: magnolia-public-mobile
   namespace: zb-schools
   labels:
-    app: sph-mobile
+    k8s.kuboard.cn/name: nginx-mobile
 spec:
   replicas: 2
   template:
     metadata:
       labels:
-        app: sph-mobile
+        k8s.kuboard.cn/name: nginx-mobile
     spec:
       containers:
         - image: '767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/sph-mobile'
