--- a/dev/magnolia-public-mobile.yaml
+++ b/dev/magnolia-public-mobile.yaml
@@ -8,13 +8,16 @@ metadata:
     k8s.kuboard.cn/name: nginx-mobile
 spec:
   replicas: 2
+  selector:
+    matchLabels:
+      k8s.kuboard.cn/name: nginx-mobile
   template:
     metadata:
       labels:
         k8s.kuboard.cn/name: nginx-mobile
     spec:
       containers:
-        - image: '767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/sph-mobile'
+        - image: "767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/sph-mobile"
           imagePullPolicy: IfNotPresent
           name: nginx
           ports:
