--- a/qa/saas-transfer-service.yaml
+++ b/qa/saas-transfer-service.yaml
@@ -19,7 +19,7 @@ spec:
             - name: TZ
               value: CST-8
             - name: RUN_ENV
-              value: "dev"
+              value: "qa"
           image: '767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/saas-transfer-service'
           imagePullPolicy: IfNotPresent
           name: transfer
