--- a/dev/ingress.yaml
+++ b/dev/ingress.yaml
@@ -15,7 +15,8 @@ metadata:
 spec:
   ingressClassName: alb
   rules:
-    - http:
+    - host: sit.zbschools.sg
+      http:
         paths:
           - path: /
             pathType: Prefix
@@ -45,3 +46,13 @@ spec:
                 name: magnolia-author-backend-svc
                 port:
                   number: 8080
+    - host: m.sit.zbschools.sg
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: nginx-mobile
+                port:
+                  number: 80
