--- a/dev/magnolia-public-frontend.yaml
+++ b/dev/magnolia-public-frontend.yaml
@@ -112,6 +112,16 @@ data:
                   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                   proxy_set_header X-Forwarded-Proto $scheme;
             }
+
+            location /lms/excel {
+                  proxy_pass http://saas-homework-service-svc:8080/excel;
+                  proxy_set_header Host $host;
+                  proxy_set_header X-Real-IP $remote_addr;
+                  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                  proxy_set_header X-Forwarded-Proto $scheme;
+            }
+
+
             
             location @rewrites {
                 rewrite ^(.+)$ /index.html break;
