--- a/dev/saas-transfer-service.yaml
+++ b/dev/saas-transfer-service.yaml
@@ -14,6 +14,15 @@ spec:
       k8s.kuboard.cn/name: saas-transfer-service
   template:
     metadata:
+        annotations:
+        kubectl.kubernetes.io/restartedAt: "2024-09-25T11:46:16+08:00"
+        vault.hashicorp.com/agent-inject: "true"
+        vault.hashicorp.com/role: "sph-zb-schools-cms-vault-reader"
+        vault.hashicorp.com/agent-inject-secret-db-config: "zb-schools/db/creds/zb-schools-db-role"
+        vault.hashicorp.com/agent-inject-secret-kv-config: "zb-schools/kv/config"
+        vault.hashicorp.com/log-level: "debug"
+        vault.hashicorp.com/namespace: "admin/engr/zb_schools/dev"
+      creationTimestamp: null
       labels:
         k8s.kuboard.cn/name: saas-transfer-service
     spec:
@@ -28,19 +37,23 @@ spec:
             - name: RUN_ENV
               value: "dev"
           image: "767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/saas-transfer-service"
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           name: transfer
           ports:
             - containerPort: 8081
               name: port8081
               protocol: TCP
           resources: {}
+          terminationMessagePath: /dev/termination-log
+          terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
+      imagePullSecrets:
+        - name: aws-ecr
       restartPolicy: Always
       schedulerName: default-scheduler
       securityContext: {}
       terminationGracePeriodSeconds: 30
-
+      serviceAccountName: service-account-sph-zb-schools
 ---
 apiVersion: v1
 kind: Service
