--- a/qa/ingress.yaml
+++ b/qa/ingress.yaml
@@ -60,3 +60,11 @@ spec:
                 name: magnolia-public-backend-svc
                 port:
                   number: 8080
+          - path: /lms
+           pathType: Prefix
+           backend:
+              service:
+                name: magnolia-public-frontend-svc
+                port:
+                  number: 80
+
