--- a/qa/saas-transfer-service.yaml
+++ b/qa/saas-transfer-service.yaml
@@ -14,6 +14,16 @@ spec:
       k8s.kuboard.cn/name: saas-transfer-service
   template:
     metadata:
+      annotations:
+        kubectl.kubernetes.io/restartedAt: "2024-09-25T11:46:16+08:00"
+        vault.hashicorp.com/agent-inject: "true"
+        vault.hashicorp.com/role: "sph-zb-schools-cms-vault-reader"
+        vault.hashicorp.com/agent-inject-secret-db-config: "zb-schools/db/creds/zb-schools-db-role"
+        vault.hashicorp.com/agent-inject-secret-kv-config: "zb-schools/kv/config"
+        vault.hashicorp.com/agent-inject-secret-aksk-config: "zb-schools/kv/aksk"
+        vault.hashicorp.com/log-level: "debug"
+        vault.hashicorp.com/namespace: "admin/engr/zb_schools/dev"
+      creationTimestamp: null
       labels:
         k8s.kuboard.cn/name: saas-transfer-service
     spec:
@@ -26,7 +36,7 @@ spec:
             - name: TZ
               value: CST-8
             - name: RUN_ENV
-              value: "dev"
+              value: "qa"
           image: "975050283759.dkr.ecr.ap-southeast-1.amazonaws.com/sph/saas-transfer-service"
           imagePullPolicy: IfNotPresent
           name: transfer
@@ -58,4 +68,4 @@ spec:
   selector:
     k8s.kuboard.cn/name: saas-transfer-service
   sessionAffinity: None
-  type: ClusterIP
+  type: ClusterIP:
