--- a/dev/ingress.yaml
+++ b/dev/ingress.yaml
@@ -6,6 +6,7 @@ metadata:
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
+    alb.ingress.kubernetes.io/load-balancer-attributes: deletion_protection.enabled=true
     alb.ingress.kubernetes.io/subnets: "subnet-07ba408e3b3814115, subnet-024dd3663cbeca60b, subnet-0689fa37eab75f700"
     alb.ingress.kubernetes.io/load-balancer-name: "ingress-lb-zb-schools-dev"
     alb.ingress.kubernetes.io/security-groups: "sg-0c685a29fc061aac0, sg-047c915dc3f6c01e0, sg-09c7f1500155dcfd6"
