--- a/dev/ingress.yaml
+++ b/dev/ingress.yaml
@@ -63,3 +63,11 @@ spec:
                 name: magnolia-public-backend-svc
                 port:
                   number: 8080
+         - path: /lms
+           pathType: Prefix
+           backend:
+              service:
+                name: magnolia-public-frontend-svc 
+                port:
+                  number: 80
+
