--- a/qa/magnolia-public-backend.yaml
+++ b/qa/magnolia-public-backend.yaml
@@ -9,27 +9,26 @@ metadata:
   name: magnolia-public-backend
   namespace: zb-schools
 spec:
-  progressDeadlineSeconds: 600
+  persistentVolumeClaimRetentionPolicy:
+    whenDeleted: Retain
+    whenScaled: Retain
+  podManagementPolicy: OrderedReady
   replicas: 3
   revisionHistoryLimit: 10
   selector:
     matchLabels:
       k8s.kuboard.cn/name: magnolia-public-backend
-  strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
-    type: RollingUpdate
+  serviceName: ''
   template:
     metadata:
       annotations:
-        kubectl.kubernetes.io/restartedAt: "2024-06-25T17:16:12+08:00"
-        vault.hashicorp.com/agent-inject: "true"
-        vault.hashicorp.com/role: "sph-zb-schools-cms-vault-reader"
-        vault.hashicorp.com/agent-inject-secret-db-config: "zb-schools/db/creds/zb-schools-db-role"
-        vault.hashicorp.com/agent-inject-secret-kv-config: "zb-schools/kv/config"
-        vault.hashicorp.com/log-level: "debug"
-        vault.hashicorp.com/namespace: "admin/engr/zb_schools/qa"
+        kubectl.kubernetes.io/restartedAt: '2024-06-25T17:16:12+08:00'
+        vault.hashicorp.com/agent-inject: 'true'
+        vault.hashicorp.com/agent-inject-secret-db-config: zb-schools/db/creds/zb-schools-db-role
+        vault.hashicorp.com/agent-inject-secret-kv-config: zb-schools/kv/config
+        vault.hashicorp.com/log-level: debug
+        vault.hashicorp.com/namespace: admin/engr/zb_schools/qa
+        vault.hashicorp.com/role: sph-zb-schools-cms-vault-reader
       creationTimestamp: null
       labels:
         k8s.kuboard.cn/name: magnolia-public-backend
@@ -39,8 +38,9 @@ spec:
             - name: TZ
               value: CST-8
             - name: BASE_URL
-              value: "https://uat.zbschools.sg"
-          image: "975050283759.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-backend"
+              value: 'https://sit.zbschools.sg'
+          image: >-
+            975050283759.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-backend
           imagePullPolicy: Always
           name: magolia-public
           ports:
@@ -51,7 +51,7 @@ spec:
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
-            - mountPath: "/usr/local/tomcat/webapps/repositories_training"
+            - mountPath: /usr/local/tomcat/webapps/repositories_training
               name: public-volume
       dnsPolicy: ClusterFirst
       imagePullSecrets:
@@ -59,21 +59,27 @@ spec:
       restartPolicy: Always
       schedulerName: default-scheduler
       securityContext: {}
-      terminationGracePeriodSeconds: 30
+      serviceAccount: service-account-sph-zb-schools
       serviceAccountName: service-account-sph-zb-schools
+      terminationGracePeriodSeconds: 30
+  updateStrategy:
+    rollingUpdate:
+      partition: 0
+    type: RollingUpdate
   volumeClaimTemplates:
-  - apiVersion: v1
-    kind: PersistentVolumeClaim
-    metadata:
-      creationTimestamp: null
-      name: public-volume
-      namespace: zb-schools
-    spec:
-      accessModes:
-        - ReadWriteOnce
-      resources:
-        requests:
-          storage: 10Gi
-      storageClassName: ebs-sc
-      volumeMode: Filesystem
-
+    - apiVersion: v1
+      kind: PersistentVolumeClaim
+      metadata:
+        creationTimestamp: null
+        name: public-volume
+        namespace: zb-schools
+      spec:
+        accessModes:
+          - ReadWriteOnce
+        resources:
+          requests:
+            storage: 10Gi
+        storageClassName: ebs-sc
+        volumeMode: Filesystem
+      status:
+        phase: Pending
