--- a/qa/magnolia-public-backend.yaml
+++ b/qa/magnolia-public-backend.yaml
@@ -38,7 +38,7 @@ spec:
             - name: TZ
               value: CST-8
             - name: BASE_URL
-              value: 'https://sit.zbschools.sg'
+              value: 'https://uat.zbschools.sg'
           image: >-
             975050283759.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-backend
           imagePullPolicy: Always
