--- a/qa/saas-transfer-service.yaml
+++ b/qa/saas-transfer-service.yaml
@@ -2,26 +2,40 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: saas-transfer-service
-  namespace: zb-schools
+  annotations:
+    actions.github.com/k8s-deploy: >-
+      {"run":"11098760851","repository":"zbschools/saas-transfer-service","workflow":"Deploy
+      to qa and prd Env
+      [saas-transfer-service]","workflowFileName":"k8s-deploy-failed-workflow-annotation","jobName":"deploy-to-eks","createdBy":"ZhangJieNCS","runUri":"https://github.com/zbschools/saas-transfer-service/actions/runs/11098760851","commit":"66ec70caac4aa8b25950b5480ec8c552954ee1ef","lastSuccessRunCommit":"ca4668ea5f8f3c4a55d66cbc8ebffe921b189ffd","branch":"refs/heads/prd/req","deployTimestamp":1727667232600,"dockerfilePaths":{},"manifestsPaths":["https://github.com/zbschools/saas-transfer-service/blob/66ec70caac4aa8b25950b5480ec8c552954ee1ef/./yaml-template/qa/saas-transfer-service.yaml"],"helmChartPaths":[],"provider":"GitHub"}
   labels:
     k8s.kuboard.cn/name: saas-transfer-service
+    workflow: actions.github.com-k8s-deploy
+    workflowFriendlyName: Deploy_to_qa_and_prd_Env_saas-transfer-service
+  name: saas-transfer-service
+  namespace: zb-schools
+  resourceVersion: '24392208'
 spec:
   progressDeadlineSeconds: 600
   replicas: 2
+  revisionHistoryLimit: 10
   selector:
     matchLabels:
       k8s.kuboard.cn/name: saas-transfer-service
+  strategy:
+    rollingUpdate:
+      maxSurge: 25%
+      maxUnavailable: 25%
+    type: RollingUpdate
   template:
     metadata:
       annotations:
-        kubectl.kubernetes.io/restartedAt: "2024-06-26T11:46:16+08:00"
-        vault.hashicorp.com/agent-inject: "true"
-        vault.hashicorp.com/role: "sph-zb-schools-cms-vault-reader"
-        vault.hashicorp.com/agent-inject-secret-db-config: "zb-schools/db/creds/zb-schools-db-role"
-        vault.hashicorp.com/agent-inject-secret-kv-config: "zb-schools/kv/config"
-        vault.hashicorp.com/log-level: "debug"
-        vault.hashicorp.com/namespace: "admin/engr/zb_schools/qa"
+        kubectl.kubernetes.io/restartedAt: '2024-06-26T11:46:16+08:00'
+        vault.hashicorp.com/agent-inject: 'true'
+        vault.hashicorp.com/agent-inject-secret-db-config: zb-schools/db/creds/zb-schools-db-role
+        vault.hashicorp.com/agent-inject-secret-kv-config: zb-schools/kv/config
+        vault.hashicorp.com/log-level: debug
+        vault.hashicorp.com/namespace: admin/engr/zb_schools/qa
+        vault.hashicorp.com/role: sph-zb-schools-cms-vault-reader
       creationTimestamp: null
       labels:
         k8s.kuboard.cn/name: saas-transfer-service
@@ -29,14 +43,15 @@ spec:
       containers:
         - command:
             - /bin/bash
-            - "-ce"
+            - '-ce'
             - java  -Xms1024m -Xmx1024m -jar /opt/app/saas-transfer-service.jar
           env:
             - name: TZ
               value: CST-8
             - name: RUN_ENV
-              value: "qa"
-          image: "975050283759.dkr.ecr.ap-southeast-1.amazonaws.com/sph/saas-transfer-service"
+              value: qa
+          image: >-
+            975050283759.dkr.ecr.ap-southeast-1.amazonaws.com/sph/saas-transfer-service:1.0.2.20241008
           imagePullPolicy: IfNotPresent
           name: transfer
           ports:
@@ -44,28 +59,12 @@ spec:
               name: port8081
               protocol: TCP
           resources: {}
+          terminationMessagePath: /dev/termination-log
+          terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       schedulerName: default-scheduler
       securityContext: {}
-      terminationGracePeriodSeconds: 30
+      serviceAccount: service-account-sph-zb-schools
       serviceAccountName: service-account-sph-zb-schools
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  annotations: {}
-  labels:
-    k8s.kuboard.cn/name: saas-transfer-service
-  name: saas-transfer-service
-  namespace: zb-schools
-spec:
-  ports:
-    - port: 8081
-      protocol: TCP
-      targetPort: 8081
-  selector:
-    k8s.kuboard.cn/name: saas-transfer-service
-  sessionAffinity: None
-  type: ClusterIP:
+      terminationGracePeriodSeconds: 30
