--- a/qa/saas-transfer-service.yaml
+++ b/qa/saas-transfer-service.yaml
@@ -13,7 +13,6 @@ metadata:
     workflowFriendlyName: Deploy_to_qa_and_prd_Env_saas-transfer-service
   name: saas-transfer-service
   namespace: zb-schools
-  resourceVersion: '24392208'
 spec:
   progressDeadlineSeconds: 600
   replicas: 2
@@ -29,7 +28,7 @@ spec:
   template:
     metadata:
       annotations:
-        kubectl.kubernetes.io/restartedAt: '2024-06-26T11:46:16+08:00'
+        kubectl.kubernetes.io/restartedAt: '2024-10-08T12:10:26+08:00'
         vault.hashicorp.com/agent-inject: 'true'
         vault.hashicorp.com/agent-inject-secret-db-config: zb-schools/db/creds/zb-schools-db-role
         vault.hashicorp.com/agent-inject-secret-kv-config: zb-schools/kv/config
@@ -68,3 +67,35 @@ spec:
       serviceAccount: service-account-sph-zb-schools
       serviceAccountName: service-account-sph-zb-schools
       terminationGracePeriodSeconds: 30
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  annotations:
+    actions.github.com/k8s-deploy: >-
+      {"run":"11098760851","repository":"zbschools/saas-transfer-service","workflow":"Deploy
+      to qa and prd Env
+      [saas-transfer-service]","workflowFileName":"k8s-deploy-failed-workflow-annotation","jobName":"deploy-to-eks","createdBy":"ZhangJieNCS","runUri":"https://github.com/zbschools/saas-transfer-service/actions/runs/11098760851","commit":"66ec70caac4aa8b25950b5480ec8c552954ee1ef","lastSuccessRunCommit":"ca4668ea5f8f3c4a55d66cbc8ebffe921b189ffd","branch":"refs/heads/prd/req","deployTimestamp":1727667232600,"dockerfilePaths":{},"manifestsPaths":["https://github.com/zbschools/saas-transfer-service/blob/66ec70caac4aa8b25950b5480ec8c552954ee1ef/./yaml-template/qa/saas-transfer-service.yaml"],"helmChartPaths":[],"provider":"GitHub"}
+  labels:
+    k8s.kuboard.cn/name: saas-transfer-service
+    workflow: actions.github.com-k8s-deploy
+    workflowFriendlyName: Deploy_to_qa_and_prd_Env_saas-transfer-service
+  name: saas-transfer-service
+  namespace: zb-schools
+spec:
+  clusterIP: 172.20.211.72
+  clusterIPs:
+    - 172.20.211.72
+  internalTrafficPolicy: Cluster
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
+  ports:
+    - port: 8081
+      protocol: TCP
+      targetPort: 8081
+  selector:
+    k8s.kuboard.cn/name: saas-transfer-service
+  sessionAffinity: None
+  type: ClusterIP
