--- a/qa/magnolia-public-frontend.yaml
+++ b/qa/magnolia-public-frontend.yaml
@@ -90,6 +90,14 @@ data:
                 proxy_set_header X-Forwarded-Proto $scheme;
             }
 
+            location /lms/teacherClass {
+                proxy_pass http://saas-homework-service-svc:8080/teacherClass;
+                proxy_set_header Host $host;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
+            }
+
             location /lms/file/getRedirectUrl {
                   proxy_pass http://saas-homework-service-svc:8080/file/getRedirectUrl;
                   proxy_set_header Host $host;
@@ -104,7 +112,14 @@ data:
                   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                   proxy_set_header X-Forwarded-Proto $scheme;
             }
-            
+
+            location /lms/excel {
+                  proxy_pass http://saas-homework-service-svc:8080/excel;
+                  proxy_set_header Host $host;
+                  proxy_set_header X-Real-IP $remote_addr;
+                  proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                  proxy_set_header X-Forwarded-Proto $scheme;
+            }
             location @rewrites {
                 rewrite ^(.+)$ /index.html break;
             }
