--- a/qa/magnolia-author-backend.yaml
+++ b/qa/magnolia-author-backend.yaml
@@ -55,7 +55,7 @@ spec:
               value: CST-8
             - name: BASE_URL
               value: "https://uat.zbschools.sg/authorFrontend"
-          image: "975050283759.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-author-backend:9fe35cce"
+          image: "975050283759.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-author-backend"
           imagePullPolicy: Always
           name: magolia-backend
           ports:
