--- a/qa/magnolia-author-backend.yaml
+++ b/qa/magnolia-author-backend.yaml
@@ -1,6 +1,4 @@
 ---
-#PVC definition
-
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -57,7 +55,13 @@ spec:
             - containerPort: 8080
               name: port8080
               protocol: TCP
-          resources: {}
+          resources:
+            limits:
+              cpu: '4'
+              memory: 8Gi
+            requests:
+              cpu: '2'
+              memory: 4Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
