--- a/qa/magnolia-author-backend.yaml
+++ b/qa/magnolia-author-backend.yaml
@@ -25,6 +25,10 @@ metadata:
   namespace: zb-schools
 spec:
   replicas: 1
+  updateStrategy:
+    rollingUpdate:
+      partition: 0
+    type: RollingUpdate
   selector:
     matchLabels:
       k8s.kuboard.cn/name: magnolia-author-backend
