--- a/qa/magnolia-author-backend.yaml
+++ b/qa/magnolia-author-backend.yaml
@@ -10,10 +10,6 @@ metadata:
   namespace: zb-schools
 spec:
   replicas: 1
-  updateStrategy:
-    rollingUpdate:
-      partition: 0
-    type: RollingUpdate
   selector:
     matchLabels:
       k8s.kuboard.cn/name: magnolia-author-backend
@@ -46,10 +42,10 @@ spec:
               protocol: TCP
           resources:
             limits:
-              cpu: '4'
+              cpu: "4"
               memory: 8Gi
             requests:
-              cpu: '2'
+              cpu: "2"
               memory: 4Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
@@ -68,6 +64,10 @@ spec:
         - name: author-volume
           persistentVolumeClaim:
             claimName: ebs-author-01
+  updateStrategy:
+    rollingUpdate:
+      partition: 0
+    type: RollingUpdate
 ---
 apiVersion: v1
 kind: Service
