svc svc0 svc1 svc2

--- a/qa/magnolia-public-backend.yaml
+++ b/qa/magnolia-public-backend.yaml
@@ -88,3 +88,96 @@ spec:
         volumeMode: Filesystem
       status:
         phase: Pending
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: magnolia-public-backend-svc
+  namespace: zb-schools
+spec:
+  internalTrafficPolicy: Cluster
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
+  ports:
+    - name: public
+      port: 8080
+      protocol: TCP
+      targetPort: 8080
+  selector:
+    k8s.kuboard.cn/name: magnolia-public-backend
+  sessionAffinity: ClientIP
+  sessionAffinityConfig:
+    clientIP:
+      timeoutSeconds: 10800
+  type: ClusterIP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  annotations: {}
+  name: magnolia-public-backend-svc-0
+  namespace: zb-schools
+spec:
+  clusterIP: None
+  clusterIPs:
+    - None
+  internalTrafficPolicy: Cluster
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
+  ports:
+    - name: port0
+      port: 8080
+      protocol: TCP
+      targetPort: 8080
+  selector:
+    statefulset.kubernetes.io/pod-name: magnolia-public-backend-0
+  sessionAffinity: None
+  type: ClusterIP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: magnolia-public-backend-svc-1
+  namespace: zb-schools
+spec:
+  clusterIP: None
+  clusterIPs:
+    - None
+  internalTrafficPolicy: Cluster
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
+  ports:
+    - name: port0
+      port: 8080
+      protocol: TCP
+      targetPort: 8080
+  selector:
+    statefulset.kubernetes.io/pod-name: magnolia-public-backend-1
+  sessionAffinity: None
+  type: ClusterIP
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: magnolia-public-backend-svc-2
+  namespace: zb-schools
+spec:
+  clusterIP: None
+  clusterIPs:
+    - None
+  internalTrafficPolicy: Cluster
+  ipFamilies:
+    - IPv4
+  ipFamilyPolicy: SingleStack
+  ports:
+    - name: port0
+      port: 8080
+      protocol: TCP
+      targetPort: 8080
+  selector:
+    statefulset.kubernetes.io/pod-name: magnolia-public-backend-2
+  sessionAffinity: None
+  type: ClusterIP
