--- a/qa/magnolia-public-mobile.yaml
+++ b/qa/magnolia-public-mobile.yaml
@@ -28,6 +28,13 @@ spec:
             - mountPath: /etc/nginx/conf.d/default.conf
               name: volume-conf
               subPath: default.conf
+          resources:
+            limits:
+              cpu: "2"
+              memory: 3Gi
+            requests:
+              cpu: "2"
+              memory: 3Gi
       restartPolicy: Always
       schedulerName: default-scheduler
       securityContext: {}
