--- a/qa/saas-homework-service.yaml
+++ b/qa/saas-homework-service.yaml
@@ -51,7 +51,13 @@ spec:
             - containerPort: 8080
               name: port8080
               protocol: TCP
-          resources: {}
+          resources:
+            limits:
+              cpu: "4"
+              memory: 6Gi
+            requests:
+              cpu: "2"
+              memory: 6Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
