--- a/dev/magnolia-public-frontend.yaml
+++ b/dev/magnolia-public-frontend.yaml
@@ -62,6 +62,7 @@ spec:
 apiVersion: v1
 data:
   default.conf: |-
+    gzip on;
     server {
             listen       80;
             listen  [::]:80;
