--- a/dev/magnolia-public-frontend.yaml
+++ b/dev/magnolia-public-frontend.yaml
@@ -36,7 +36,13 @@ spec:
             - containerPort: 80
               name: http
               protocol: TCP
-          resources: {}
+          resources:
+            limits:
+              cpu: "2"
+              memory: 6Gi
+            requests:
+              cpu: "2"
+              memory: 6Gi 
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
