--- a/dev/saas-transfer-service.yaml
+++ b/dev/saas-transfer-service.yaml
@@ -44,7 +44,13 @@ spec:
             - containerPort: 8081
               name: port8081
               protocol: TCP
-          resources: {}
+          resources:
+            limits:
+              cpu: "2"
+              memory: 6Gi
+            requests:
+              cpu: "2"
+              memory: 6Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
       dnsPolicy: ClusterFirst
