--- a/dev/magnolia-public-backend.yaml
+++ b/dev/magnolia-public-backend.yaml
@@ -56,6 +56,8 @@ spec:
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
+            - mountPath: /usr/local/tomcat/webapps/repositories_training-old
+              name: public-volume-old
             - mountPath: /usr/local/tomcat/webapps/repositories_training
               name: public-volume
       dnsPolicy: ClusterFirst
@@ -67,6 +69,10 @@ spec:
       serviceAccount: service-account-sph-zb-schools
       serviceAccountName: service-account-sph-zb-schools
       terminationGracePeriodSeconds: 30
+      volumes:
+        - name: public-volume-old
+          persistentVolumeClaim:
+            claimName: ebs-public-01
   updateStrategy:
     rollingUpdate:
       partition: 0
