--- a/dev/magnolia-author-backend.yaml
+++ b/dev/magnolia-author-backend.yaml
@@ -49,7 +49,7 @@ spec:
             - name: BASE_URL
               value: "https://sit.zbschools.sg/authorFrontend"
           image: "767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-author-backend"
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           name: magolia-backend
           ports:
             - containerPort: 8080
@@ -65,6 +65,8 @@ spec:
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
           volumeMounts:
+            - mountPath: "/usr/local/tomcat/webapps/repositories_training-old"
+              name: author-volume-old
             - mountPath: "/usr/local/tomcat/webapps/repositories_training"
               name: author-volume
       dnsPolicy: ClusterFirst
@@ -76,13 +78,30 @@ spec:
       terminationGracePeriodSeconds: 30
       serviceAccountName: service-account-sph-zb-schools
       volumes:
-        - name: author-volume
+        - name: author-volume-old
           persistentVolumeClaim:
             claimName: ebs-author-01
   updateStrategy:
     rollingUpdate:
       partition: 0
     type: RollingUpdate
+  volumeClaimTemplates:
+    - apiVersion: v1
+      kind: PersistentVolumeClaim
+      metadata:
+        creationTimestamp: null
+        name: author-volume
+        namespace: zb-schools
+      spec:
+        accessModes:
+          - ReadWriteOnce
+        resources:
+          requests:
+            storage: 10Gi
+        storageClassName: ebs-sc
+        volumeMode: Filesystem
+      status:
+        phase: Pending  
 ---
 apiVersion: v1
 kind: Service
