--- a/dev/magnolia-public-backend.yaml
+++ b/dev/magnolia-public-backend.yaml
@@ -40,7 +40,7 @@ spec:
             - name: BASE_URL
               value: "https://sit.zbschools.sg"
           image: "767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-public-backend"
-          imagePullPolicy: Always
+          imagePullPolicy: IfNotPresent
           name: magolia-public
           ports:
             - containerPort: 8080
@@ -61,7 +61,7 @@ spec:
       dnsPolicy: ClusterFirst
       imagePullSecrets:
         - name: aws-ecr
-      restartPolicy: IfNotPresent
+      restartPolicy: Always
       schedulerName: default-scheduler
       securityContext: {}
       serviceAccount: service-account-sph-zb-schools
