--- a/dev/magnolia-author-backend.yaml
+++ b/dev/magnolia-author-backend.yaml
@@ -33,6 +33,10 @@ spec:
               value: CST-8
             - name: BASE_URL
               value: "https://sit.zbschools.sg/authorFrontend"
+            - name: ENV_TYPE
+              value: "sit"
+            - name: INSTANCE_TYPE
+              value: "magnoliaAuthor"
           image: "767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/magnolia-author-backend"
           imagePullPolicy: IfNotPresent
           name: magolia-backend
