--- a/dev/saas-homework-service.yaml
+++ b/dev/saas-homework-service.yaml
@@ -38,7 +38,7 @@ spec:
         - command:
             - /bin/bash
             - "-ce"
-            - java  -Xms1024m -Xmx1024m -javaagent:/opt/app/newrelic.jar -jar /opt/app/saas-homework-service.jar
+            - java  -Xms1024m -Xmx1024m -Dnewrelic.environment=sit -javaagent:/opt/app/newrelic.jar -jar /opt/app/saas-homework-service.jar
           image: "767397694429.dkr.ecr.ap-southeast-1.amazonaws.com/sph/saas-homework-service"
           imagePullPolicy: Always
           env:
