--- a/prd/ingress.yaml
+++ b/prd/ingress.yaml
@@ -9,7 +9,7 @@ metadata:
     alb.ingress.kubernetes.io/subnets: "subnet-042846e2cf598d378, subnet-00b8c5f4e5889bc2a, subnet-085e7be1fc5e5e0b7"
     alb.ingress.kubernetes.io/load-balancer-name: "ingress-lb-zb-schools-prd"
     alb.ingress.kubernetes.io/security-groups: "sg-09f502a8ba4bef043, sg-04d7eb341d98178af, sg-0e118d8a7229274e5"
-    alb.ingress.kubernetes.io/load-balancer-attributes: deletion_protection.enabled=true
+    alb.ingress.kubernetes.io/load-balancer-attributes: deletion_protection.enabled=true,access_logs.s3.enabled=true,access_logs.s3.bucket=s3-sph-zb-schools-prd-access-log-bucket
 spec:
   ingressClassName: alb
   rules:
