--- a/dev/magnolia-author-backend.yaml
+++ b/dev/magnolia-author-backend.yaml
@@ -53,6 +53,9 @@ spec:
               memory: 6Gi
           terminationMessagePath: /dev/termination-log
           terminationMessagePolicy: File
+          volumeMounts:
+            - mountPath: "/usr/local/tomcat/webapps/repositories_training"
+              name: author-volume
       dnsPolicy: ClusterFirst
       imagePullSecrets:
         - name: aws-ecr
@@ -61,6 +64,10 @@ spec:
       securityContext: {}
       terminationGracePeriodSeconds: 30
       serviceAccountName: service-account-sph-zb-schools
+      volumes:
+        - name: author-volume
+          persistentVolumeClaim:
+            claimName: ebs-author-01
   updateStrategy:
     rollingUpdate:
       partition: 0
