--- a/qa/magnolia-public-frontend.yaml
+++ b/qa/magnolia-public-frontend.yaml
@@ -85,6 +85,7 @@ data:
        application/x-web-app-manifest+json
        application/xhtml+xml
        application/xml
+       application/octet-stream
        font/opentype
        image/bmp
        image/svg+xml
