--- a/dev/magnolia-public-frontend.yaml
+++ b/dev/magnolia-public-frontend.yaml
@@ -86,6 +86,7 @@ data:
        application/x-web-app-manifest+json
        application/xhtml+xml
        application/xml
+       application/octet-stream
        font/opentype
        image/bmp
        image/svg+xml
