--- a/qa/magnolia-public-frontend.yaml
+++ b/qa/magnolia-public-frontend.yaml
@@ -88,6 +88,7 @@ data:
        application/octet-stream
        font/opentype
        image/bmp
+       image/png
        image/svg+xml
        image/x-icon
        text/cache-manifest
