--- a/dev/magnolia-author-backend.yaml
+++ b/dev/magnolia-author-backend.yaml
@@ -79,3 +79,7 @@ spec:
   type: NodePort
   selector:
     k8s.kuboard.cn/name: magnolia-author-backend
+  sessionAffinity: ClientIP
+  sessionAffinityConfig:
+    clientIP:
+      timeoutSeconds: 3600
