--- a/dev/magnolia-public-mobile.yaml
+++ b/dev/magnolia-public-mobile.yaml
@@ -94,3 +94,7 @@ spec:
   selector:
     k8s.kuboard.cn/name: nginx-mobile
   type: ClusterIP
+  sessionAffinity: ClientIP
+  sessionAffinityConfig:
+    clientIP:
+      timeoutSeconds: 3600
