--- a/dev/magnolia-public-frontend.yaml
+++ b/dev/magnolia-public-frontend.yaml
@@ -198,3 +198,8 @@ spec:
   type: NodePort
   selector:
     k8s.kuboard.cn/name: magnolia-public-frontend
+  sessionAffinity: ClientIP
+  sessionAffinityConfig:
+    clientIP:
+      timeoutSeconds: 3600
+
