--- a/dev/magnolia-public-mobile.yaml
+++ b/dev/magnolia-public-mobile.yaml
@@ -51,6 +51,38 @@ spec:
 apiVersion: v1
 data:
   nginx-mobile.conf: |-
+    gzip on;
+    gzip_comp_level 5;
+    gzip_min_length 3;
+    gzip_proxied any;
+    gzip_vary on;
+    gzip_types
+       application/atom+xml
+       application/javascript
+       application/json
+       application/ld+json
+       application/manifest+json
+       application/rss+xml
+       application/vnd.geo+json
+       application/vnd.ms-fontobject
+       application/x-font-ttf
+       application/x-web-app-manifest+json
+       application/xhtml+xml
+       application/xml
+       application/octet-stream
+       font/opentype
+       image/bmp
+       image/png
+       image/svg+xml
+       image/x-icon
+       text/cache-manifest
+       text/css
+       text/plain
+       text/vcard
+       text/vnd.rim.location.xloc
+       text/vtt
+       text/x-component
+       text/x-cross-domain-policy;
     server {
         listen      80;
         listen [::]:80;
