--- a/dev/magnolia-public-backend.yaml
+++ b/dev/magnolia-public-backend.yaml
@@ -9,10 +9,7 @@ metadata:
   name: magnolia-public-backend
   namespace: zb-schools
 spec:
-  persistentVolumeClaimRetentionPolicy:
-    whenDeleted: Retain
-    whenScaled: Retain
-  podManagementPolicy: OrderedReady
+  progressDeadlineSeconds: 600
   replicas: 2
   revisionHistoryLimit: 10
   selector:
