--- a/qa/magnolia-public-frontend.yaml
+++ b/qa/magnolia-public-frontend.yaml
@@ -193,3 +193,7 @@ spec:
   type: NodePort
   selector:
     k8s.kuboard.cn/name: magnolia-public-frontend
+  sessionAffinity: ClientIP
+  sessionAffinityConfig:
+    clientIP:
+      timeoutSeconds: 3600
