--- a/dev/magnolia-author-backend-deploy.yaml
+++ b/dev/magnolia-author-backend-deploy.yaml
@@ -1,6 +1,6 @@
 ---
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
   annotations:
     k8s.kuboard.cn/workload: magnolia-author-backend
@@ -13,10 +13,10 @@ spec:
   selector:
     matchLabels:
       k8s.kuboard.cn/name: magnolia-author-backend
-  podManagementPolicy: OrderedReady
-  updateStrategy:
+  strategy:
     rollingUpdate:
-      partition: 0
+      maxSurge: 25%
+      maxUnavailable: 25%
     type: RollingUpdate
   template:
     metadata:
@@ -106,18 +106,3 @@ spec:
   sessionAffinityConfig:
     clientIP:
       timeoutSeconds: 86400
----
-apiVersion: v1
-kind: Service
-metadata:
-  namespace: zb-schools
-  name: magnolia-author-backend-svc-0
-spec:
-  ports:
-    - port: 8080
-      targetPort: 8080
-      protocol: TCP
-  type: ClusterIP
-  selector:
-    k8s.kuboard.cn/name: magnolia-author-backend
-    pod-name: magnolia-author-backend-0
